@@ -167,7 +167,7 @@ of the remaining troves to ensure those dependencies remain satisfied. If
 those dependencies are broken, a dependency error is generated. This option
 tells conary to try and leave troves in place to resolve those dependencies.
 .TP
-.B \-\-info
+.B \-\-info, \-i
 Display a summary of what troves will be affected by the update.
 .TP
 .B \-\-just-db
@@ -238,7 +238,7 @@ See \fBupdate \-\-apply-critical\fP
 .B \-\-exclude-troves <patterns>
 See \fBupdate \-\-exclude-troves\fP
 .TP
-.B \-\-info
+.B \-\-info, \-i
 Displays the list of update tasks that would be performed without
 doing the actual system update
 .TP
@@ -333,7 +333,7 @@ Displays the troves that fulfilled the build requirements of the trove.  (Turns 
 .B \-\-deps
 Displays full dependency information for the given trove.  (--recurse implied)
 .TP
-.B \-\-info
+.B \-\-info, \-i
 Displays information on the specified troves, including flavors, requirements, and metadata.
 .TP
 .B \-\-signatures
