@@ -168,7 +168,7 @@ Automatically clone the source for every package your are cloning.  So, for exam
 .B \-\-full-recurse
 For any group included in the clone operation, clone every package and subgroup included in that group.  (Note: cvc automatically clones any subgroups that were created from the same source component - there is no way to disable this.  Similarly, cvc automatically clones all components in a package when the package is selected for cloning.  This is why this option is called full-recurse instead of just recurse.
 .TP
-.B \-\-info
+.B \-\-info, \-i
 Determine the packages and groups that would be created by the clone and display that information, without actually cloning.
 .TP 4
 .B \-\-message MESSAGE
